[gd_scene load_steps=29 format=4 uid="uid://c0cpbsi4iysja"]

[ext_resource type="Texture2D" uid="uid://c3jx7eiqqbs10" path="res://Assets/Blocos/grama.png" id="1_p5tfc"]
[ext_resource type="PackedScene" uid="uid://c3h2tdp4f6mm7" path="res://scenes/player.tscn" id="2_d36r6"]
[ext_resource type="Texture2D" uid="uid://dnr31wycgvj1l" path="res://Assets/Blocos/tijolo.png" id="2_y4pes"]
[ext_resource type="Texture2D" uid="uid://bycfyokyfbm2g" path="res://Assets/Blocos/preto.png" id="3_gjaqp"]
[ext_resource type="Texture2D" uid="uid://bg25nto1puluk" path="res://Assets/Blocos/tijolo_vermelho.png" id="4_50xx4"]
[ext_resource type="Texture2D" uid="uid://ds5owymw0qqoq" path="res://Assets/Ambiente/sol.png" id="5_fg850"]
[ext_resource type="Texture2D" uid="uid://d0xb56b28mlw7" path="res://Assets/Ambiente/nuvem.png" id="6_gnxl4"]
[ext_resource type="PackedScene" uid="uid://br3vdj84fiop1" path="res://scenes/coin.tscn" id="8_3ux6x"]
[ext_resource type="PackedScene" uid="uid://dg4crvxsm3lip" path="res://scenes/spikes.tscn" id="8_ujrdh"]
[ext_resource type="PackedScene" uid="uid://cy7xagelbty1v" path="res://scenes/flag.tscn" id="9_qw4q1"]
[ext_resource type="PackedScene" uid="uid://7om7elg7vt0t" path="res://scenes/enemy.tscn" id="11_aixsr"]
[ext_resource type="Texture2D" uid="uid://4kfmsiygtrhg" path="res://Assets/Botões/botao_esquerdo.png" id="12_nqkac"]
[ext_resource type="Texture2D" uid="uid://bk5ur501n54to" path="res://Assets/Botões/botao_esquerdo_pressionado.png" id="13_oa72u"]
[ext_resource type="Texture2D" uid="uid://b2m6kh5p5nia0" path="res://Assets/Botões/botao_direito.png" id="14_ye5dt"]
[ext_resource type="Texture2D" uid="uid://dso0ce027bbb2" path="res://Assets/Botões/botao_direito_pressionado.png" id="15_137lq"]
[ext_resource type="Texture2D" uid="uid://cl4mo3qgui3l4" path="res://Assets/Botões/botao_pulo.png" id="16_x0bxg"]
[ext_resource type="Texture2D" uid="uid://cjtgfmo01ycyv" path="res://Assets/Botões/botao_pulo_pressionado.png" id="17_0bqv0"]
[ext_resource type="AudioStream" uid="uid://cst7o1qsdn28x" path="res://Assets/Músicas/MusicaFase1.wav" id="18_edkia"]
[ext_resource type="Texture2D" uid="uid://w1qswub5ahrx" path="res://Assets/Coletável/moeda.png" id="19_3ndx5"]
[ext_resource type="Script" path="res://hud_manager.gd" id="19_n7nmo"]
[ext_resource type="FontFile" uid="uid://dd2bfajb23lof" path="res://Assets/Fonte/Retro Gaming.ttf" id="20_ggv1v"]
[ext_resource type="Texture2D" uid="uid://dkx7wbuinrr0w" path="res://Assets/Personagem/personagem.png" id="21_mha3c"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eg0kc"]
texture = ExtResource("1_p5tfc")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pwvsa"]
texture = ExtResource("2_y4pes")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fl8qs"]
texture = ExtResource("3_gjaqp")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ybwqc"]
texture = ExtResource("4_50xx4")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_1cyyn"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_eg0kc")
sources/1 = SubResource("TileSetAtlasSource_pwvsa")
sources/2 = SubResource("TileSetAtlasSource_fl8qs")
sources/3 = SubResource("TileSetAtlasSource_ybwqc")

[sub_resource type="AnimatedTexture" id="AnimatedTexture_oan48"]
frame_0/texture = ExtResource("19_3ndx5")

[node name="world" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1248.0
offset_bottom = 704.0
color = Color(0.2, 0.533333, 0.870588, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAABIAAAAAAAAAAAABABIAAAABAAAAAAACABIAAAAAAAAAAAADABIAAAABAAAAAAAEABIAAAAAAAAAAAAFABIAAAABAAAAAAAGABIAAAAAAAAAAAAHABIAAAABAAAAAAAIABIAAAAAAAAAAAAJABIAAAABAAAAAAAKABIAAAAAAAAAAAALABIAAAABAAAAAAAMABIAAAAAAAAAAAANABIAAAABAAAAAAAOABIAAAAAAAAAAAAPABIAAAABAAAAAAAQABIAAAAAAAAAAAARABIAAAABAAAAAAASABIAAAAAAAAAAAATABIAAAABAAAAAAAUABIAAAAAAAAAAAAVABIAAAABAAAAAAAWABIAAAAAAAAAAAAXABIAAAABAAAAAAAYABIAAAAAAAAAAAAZABIAAAABAAAAAAAaABIAAAAAAAAAAAAbABIAAAABAAAAAAAcABIAAAAAAAAAAAAdABIAAAABAAAAAAAeABIAAAAAAAAAAAAfABIAAAABAAAAAAAgABIAAAAAAAAAAAAhABIAAAABAAAAAAAiABIAAAAAAAAAAAAjABIAAAABAAAAAAAkABIAAAAAAAAAAAAlABIAAAABAAAAAAAmABIAAAAAAAAAAAAAABMAAAAAAAEAAAABABMAAAABAAEAAAAAABQAAAAAAAEAAAABABQAAAABAAEAAAAAABUAAAAAAAEAAAABABUAAAABAAEAAAACABMAAAAAAAEAAAADABMAAAABAAEAAAACABQAAAAAAAEAAAADABQAAAABAAEAAAACABUAAAAAAAEAAAADABUAAAABAAEAAAAEABMAAAAAAAEAAAAFABMAAAABAAEAAAAEABQAAAAAAAEAAAAFABQAAAABAAEAAAAEABUAAAAAAAEAAAAFABUAAAABAAEAAAAGABMAAAAAAAEAAAAHABMAAAABAAEAAAAGABQAAAAAAAEAAAAHABQAAAABAAEAAAAGABUAAAAAAAEAAAAHABUAAAABAAEAAAAIABMAAAAAAAEAAAAJABMAAAABAAEAAAAIABQAAAAAAAEAAAAJABQAAAABAAEAAAAIABUAAAAAAAEAAAAJABUAAAABAAEAAAAKABMAAAAAAAEAAAALABMAAAABAAEAAAAKABQAAAAAAAEAAAALABQAAAABAAEAAAAKABUAAAAAAAEAAAALABUAAAABAAEAAAAMABMAAAAAAAEAAAANABMAAAABAAEAAAAMABQAAAAAAAEAAAANABQAAAABAAEAAAAMABUAAAAAAAEAAAANABUAAAABAAEAAAAOABMAAAAAAAEAAAAPABMAAAABAAEAAAAOABQAAAAAAAEAAAAPABQAAAABAAEAAAAOABUAAAAAAAEAAAAPABUAAAABAAEAAAAQABMAAAAAAAEAAAARABMAAAABAAEAAAAQABQAAAAAAAEAAAARABQAAAABAAEAAAAQABUAAAAAAAEAAAARABUAAAABAAEAAAASABMAAAAAAAEAAAATABMAAAABAAEAAAASABQAAAAAAAEAAAATABQAAAABAAEAAAASABUAAAAAAAEAAAATABUAAAABAAEAAAAUABMAAAAAAAEAAAAVABMAAAABAAEAAAAUABQAAAAAAAEAAAAVABQAAAABAAEAAAAUABUAAAAAAAEAAAAVABUAAAABAAEAAAAWABMAAAAAAAEAAAAXABMAAAABAAEAAAAWABQAAAAAAAEAAAAXABQAAAABAAEAAAAWABUAAAAAAAEAAAAXABUAAAABAAEAAAAYABMAAAAAAAEAAAAZABMAAAABAAEAAAAYABQAAAAAAAEAAAAZABQAAAABAAEAAAAYABUAAAAAAAEAAAAZABUAAAABAAEAAAAaABMAAAAAAAEAAAAbABMAAAABAAEAAAAaABQAAAAAAAEAAAAbABQAAAABAAEAAAAaABUAAAAAAAEAAAAbABUAAAABAAEAAAAcABMAAAAAAAEAAAAdABMAAAABAAEAAAAcABQAAAAAAAEAAAAdABQAAAABAAEAAAAcABUAAAAAAAEAAAAdABUAAAABAAEAAAAeABMAAAAAAAEAAAAfABMAAAABAAEAAAAeABQAAAAAAAEAAAAfABQAAAABAAEAAAAeABUAAAAAAAEAAAAfABUAAAABAAEAAAAgABMAAAAAAAEAAAAhABMAAAABAAEAAAAgABQAAAAAAAEAAAAhABQAAAABAAEAAAAgABUAAAAAAAEAAAAhABUAAAABAAEAAAAiABMAAAAAAAEAAAAjABMAAAABAAEAAAAiABQAAAAAAAEAAAAjABQAAAABAAEAAAAiABUAAAAAAAEAAAAjABUAAAABAAEAAAAkABMAAAAAAAEAAAAlABMAAAABAAEAAAAkABQAAAAAAAEAAAAlABQAAAABAAEAAAAkABUAAAAAAAEAAAAlABUAAAABAAEAAAAmABMAAAAAAAEAAAAmABQAAAAAAAEAAAAmABUAAAAAAAEAAAAAABEAAQAAAAAAAAAAABAAAQAAAAAAAAAAAA8AAwAAAAAAAAABAA8AAwAAAAAAAAABABAAAQAAAAAAAAABABEAAQAAAAAAAAACAA8AAwAAAAAAAAADABEAAQAAAAAAAAADABAAAQAAAAAAAAADAA8AAwAAAAAAAAACABAAAgAAAAAAAAACABEAAgAAAAAAAAAEAA8AAwAAAAAAAAADAA4AAwAAAAAAAAADAA0AAwAAAAAAAAACAAwAAwAAAAAAAAABAAwAAwAAAAAAAAAAAAwAAwAAAAAAAAACAA0AAwAAAAAAAAACAA4AAwAAAAAAAAABAA4AAwAAAAAAAAAAAA4AAwAAAAAAAAAAAA0AAwAAAAAAAAABAA0AAwAAAAAAAAD//wwAAQAAAAAAAAD//w0AAQAAAAAAAAD//w4AAQAAAAAAAAD//w8AAQAAAAAAAAD//xAAAQAAAAAAAAD//xEAAQAAAAAAAAD//xIAAQAAAAAAAAD//xMAAQAAAAAAAAD//xQAAQAAAAAAAAD//xUAAQAAAAAAAAAnAAwAAQAAAAAAAAAnAA0AAQAAAAAAAAAnAA4AAQAAAAAAAAAnAA8AAQAAAAAAAAAnABAAAQAAAAAAAAAnABEAAQAAAAAAAAAnABIAAQAAAAAAAAAnABMAAQAAAAAAAAAnABQAAQAAAAAAAAAnABUAAQAAAAAAAAAnAAsAAQAAAAAAAAAnAAoAAQAAAAAAAAAnAAgAAQAAAAAAAAAnAAkAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAYAAQAAAAAAAAAQABEAAQAAAAAAAAAdABEAAQAAAAAAAAAfAA8AAQAAAAAAAAAgAA8AAQAAAAAAAAAhAA8AAQAAAAAAAAA=")
tile_set = SubResource("TileSet_1cyyn")

[node name="Sol" type="Sprite2D" parent="."]
position = Vector2(864, 232)
scale = Vector2(5.5, 6)
texture = ExtResource("5_fg850")

[node name="Nuvem" type="Node2D" parent="."]
position = Vector2(-120, 224)
scale = Vector2(6.75, 5.75)

[node name="Nuvem2" type="Sprite2D" parent="Nuvem"]
position = Vector2(33.1852, 2.78261)
texture = ExtResource("6_gnxl4")

[node name="Nuvem3" type="Sprite2D" parent="Nuvem"]
position = Vector2(69.9259, -4.17391)
texture = ExtResource("6_gnxl4")

[node name="Nuvem4" type="Sprite2D" parent="Nuvem"]
position = Vector2(105.481, 4.17391)
texture = ExtResource("6_gnxl4")

[node name="Spikes" type="Node2D" parent="."]

[node name="Spikes" parent="Spikes" instance=ExtResource("8_ujrdh")]
position = Vector2(632, 568)

[node name="Spikes2" parent="Spikes" instance=ExtResource("8_ujrdh")]
position = Vector2(864, 568)

[node name="Flags" type="Node2D" parent="."]
position = Vector2(1208, 560)

[node name="Flag" parent="Flags" instance=ExtResource("9_qw4q1")]

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("8_3ux6x")]
position = Vector2(528, 528)

[node name="Coin2" parent="Coins" instance=ExtResource("8_3ux6x")]
position = Vector2(760, 560)

[node name="Coin3" parent="Coins" instance=ExtResource("8_3ux6x")]
position = Vector2(944, 528)

[node name="Coin4" parent="Coins" instance=ExtResource("8_3ux6x")]
position = Vector2(1040, 464)

[node name="Player" type="Node2D" parent="."]
position = Vector2(8, 16)

[node name="player" parent="Player" instance=ExtResource("2_d36r6")]
position = Vector2(152, 552)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("11_aixsr")]
position = Vector2(480, 568)

[node name="Enemy2" parent="Enemies" instance=ExtResource("11_aixsr")]
position = Vector2(1008, 568)

[node name="Enemy3" parent="Enemies" instance=ExtResource("11_aixsr")]
position = Vector2(1056, 568)

[node name="Controls" type="CanvasLayer" parent="."]
visible = false

[node name="ui_left" type="TouchScreenButton" parent="Controls"]
position = Vector2(16, 576)
scale = Vector2(2, 2)
texture_normal = ExtResource("12_nqkac")
texture_pressed = ExtResource("13_oa72u")
action = "ui_left"
visibility_mode = 1

[node name="ui_right" type="TouchScreenButton" parent="Controls"]
position = Vector2(80, 576)
scale = Vector2(2, 2)
texture_normal = ExtResource("14_ye5dt")
texture_pressed = ExtResource("15_137lq")
action = "ui_right"
visibility_mode = 1

[node name="ui_jump" type="TouchScreenButton" parent="Controls"]
position = Vector2(1088, 576)
scale = Vector2(2, 2)
texture_normal = ExtResource("16_x0bxg")
texture_pressed = ExtResource("17_0bqv0")
action = "ui_up"
visibility_mode = 1

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_edkia")
volume_db = -10.0
autoplay = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("19_n7nmo")

[node name="container" type="MarginContainer" parent="HUD/control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="coins_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0

[node name="coins_icon" type="TextureRect" parent="HUD/control/container/coins_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("AnimatedTexture_oan48")

[node name="coins_counter" type="Label" parent="HUD/control/container/coins_container/coins_icon"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -12.0
offset_right = 58.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "000"
vertical_alignment = 1

[node name="timer_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="timer_label" type="Label" parent="HUD/control/container/timer_container"]
layout_mode = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "TIME:"
vertical_alignment = 1

[node name="timer_counter" type="Label" parent="HUD/control/container/timer_container"]
layout_mode = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "00:00"
vertical_alignment = 1

[node name="score_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 8

[node name="score_label" type="Label" parent="HUD/control/container/score_container"]
layout_mode = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "SCORE:"
vertical_alignment = 1

[node name="score_counter" type="Label" parent="HUD/control/container/score_container"]
layout_mode = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "000000"
vertical_alignment = 1

[node name="life_container" type="HBoxContainer" parent="HUD/control/container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="life_icon" type="TextureRect" parent="HUD/control/container/life_container"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("21_mha3c")

[node name="life_separator" type="Label" parent="HUD/control/container/life_container/life_icon"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -14.0
offset_right = 58.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "X"
vertical_alignment = 1

[node name="life_counter" type="Label" parent="HUD/control/container/life_container/life_icon"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -16.0
offset_right = 82.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/line_spacing = 8
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("20_ggv1v")
theme_override_font_sizes/font_size = 18
text = "03"
vertical_alignment = 1
